# buttonbox

./: buttonbox.spec  pyproject.toml  run_gui.py
.github/workflows/: build-windows.yml
buttonbox/: cli.py  config.py  daemon.py  device.py  events.py
buttonbox/actions/: __init__.py  base.py  command_action.py  http_action.py  keyboard_action.py  script_action.py
buttonbox/gui/: __main__.py  action_widget.py  key_recorder.py  serial_worker.py  window.py
buttonbox/gui/ui/: action_widget.ui  main_window.ui
pico/: boot.py  code.py
